# README-AGENT

./: .gitignore  DEV_GUIDE.md  README.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/frontend/src/: App.vue  env.d.ts  main.ts  queryClient.ts
apps/frontend/src/api/: core.ts  import-stream.ts  index.ts
apps/frontend/src/components/: ChatPanel.vue  DocumentList.vue  RemoteSettingsPanel.vue  SidebarTree.vue
apps/frontend/src/composables/: useDesktopApi.ts  useDraggableWindow.ts  useImportLinkFlow.ts  useMarkdownRenderer.ts  useNotesLookup.ts  usePageRender.ts  usePdfLoader.ts  usePdfSelection.ts  useResizableWindow.ts  useSelectText.ts  useZoomAnchor.ts
apps/frontend/src/layouts/: AdminLayout.vue  ProfileLayout.vue  WorkbenchLayout.vue
apps/frontend/src/locales/: en.ts  index.ts  zh.ts
apps/frontend/src/router/: index.ts
apps/frontend/src/stores/: auth.ts  chat.ts  html-reflow.ts  library.ts  locale.ts  notes-ui.ts  panel.ts  pdf-translation.ts  pdf-ui.ts  pdf.ts  profile.ts  roadmap.ts  tag.ts  theme.ts  translation.ts  workbench.ts
apps/frontend/src/styles/: arxiv-compat.css  base.css  components.css  fonts.css  index.css  tokens.css  vendors.css
apps/frontend/src/types/: d3-force.d.ts  index.ts  pdf.ts  (+1 more)
apps/local-runtime/: package.json  tsconfig.json
apps/local-runtime/src/: config.ts  server.ts
scripts/: tauri-dev.mjs
(+129 files in other folders)
